# Degridder

./: CMakeLists.txt  README.md  compare_output_degridder.py
include/: common.h  degridding.h  fft_run.h  image_to_csv.h  input_grid.h  md5.h  preesm.h  top.h  vis_to_csv.h
scripts/: build_casa.slurm  build_libc.slurm  build_llvm.slurm  build_openmp.slurm
src/: casacore_wrapper.cpp  degridding.c  fft_run.c  image_to_csv.c  input_grid.c  top.c  vis_to_csv.c
